--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "node ./src/index.js",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
